fix: id 컬럼을 no로 변경

--- a/frontend/src/app/pages/board/board-list/board-list.component.html
+++ b/frontend/src/app/pages/board/board-list/board-list.component.html
@@ -17,7 +17,7 @@
       </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let post of pageList.list" (click)="handleRowSelect(post.id)">
+        <tr *ngFor="let post of pageList.list" (click)="handleRowSelect(post.no)">
           <td>{{ post.rownum }}</td>
           <td class="title">{{post.title }}</td>
           <td>{{ post.writer }}</td>
