--- a/frontend/src/app/pages/board/board-list/board-list.component.css
+++ b/frontend/src/app/pages/board/board-list/board-list.component.css
@@ -23,6 +23,11 @@
   margin-bottom: 10px;
 }
 
+.board-content {
+  width: 100%;
+  height: 100%;
+}
+
 .board-footer {
   display: flex;
   justify-content: space-between;
@@ -126,3 +131,11 @@ table th:nth-child(5), table td:nth-child(5) {
   color: #ffffff;
   border: none;
 }
+
+
+/*:host {*/
+/*  display: flex;*/
+/*  justify-content: center;*/
+/*  align-items: center;*/
+/*  width: 100%;*/
+/*}*/
