--- a/frontend/src/app/pages/signup/signup.component.html
+++ b/frontend/src/app/pages/signup/signup.component.html
@@ -1,36 +1,36 @@
 <div class="signup-container">
-  <form action="/" class="form">
+  <form action="/" class="signup-form">
     <h1>Sign Up</h1>
     <p>Please fill in this form to create an account.</p>
-    <hr>
+    <hr class="signup-hr">
 
-    <label htmlFor="email">
+    <label htmlfor="email" class="signup-label">
       <b>Email</b>
     </label>
-    <input type="text" placeholder="Enter Email" name="email" required>
+    <input type="text" placeholder="Enter Email" name="email" class="signup-input" required>
 
-    <label htmlFor="psw">
+    <label htmlfor="psw" class="signup-label">
       <b>Password</b>
     </label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="psw" class="signup-input" required>
 
-    <label htmlFor="psw-repeat">
+    <label htmlfor="psw-repeat" class="signup-label">
       <b>Repeat Password</b>
     </label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" class="signup-input" required>
 
-    <label>
-      <input type="checkbox" checked name="remember" style="margin-bottom: 15px;"> Remember me
+    <label class="signup-remember">
+      <input type="checkbox" checked name="remember" class="signup-checkbox" style="margin-bottom: 15px;"> Remember me
     </label>
 
-    <p>
+    <p class="signup-terms">
       By creating an account you agree to our
-      <a routerLink="#" style="color: dodgerblue">Terms & Privacy</a>.
+      <a href="#" class="signup-terms-link" style="color: dodgerblue">Terms & Privacy</a>.
     </p>
 
-    <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn">Sign Up</button>
+    <div class="signup-button-container">
+      <button type="button" class="signup-cancelbtn">Cancel</button>
+      <button type="submit" class="signup-signupbtn">Sign Up</button>
     </div>
   </form>
 </div>
